# dataverse

./: .gitignore  Dockerfile  cert.pem  compose.yaml  key.pem  pyproject.toml  readme.md  test.db  test_socket.html
app/: database.py  main.py  websockets.py
app/config/: config.py
app/models/: __init__.py  post.py  test.py
app/routers/: posts.py  tests.py  websocket.py
app/schemas/: __init__.py  post.py  test.py
